--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8011
 
+spring.datasource.url=jdbc:mysql://localhost/security_1
+spring.datasource.username=root
+#spring.datasource.password=
