--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8011
 
 spring.datasource.url=jdbc:mysql://localhost/security_1
-spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.username=marius
+spring.datasource.password=password
+
+our.very.very.very.secret.key=secret
