--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost/security_1
 spring.datasource.username=marius
 spring.datasource.password=password
 
-our.very.very.very.secret.key=secret
+our.very.secret.key=secret
