--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,12 @@
 server.port=8011
 
-spring.datasource.url=jdbc:mysql://localhost/security_1
+spring.datasource.url=jdbc:mysql://localhost:3306/security_1
 spring.datasource.username=marius
 spring.datasource.password=password
 
-flyway.url = jdbc:mysql://localhost:3306
+flyway.url = jdbc:mysql://localhost:3306/security_1
 flyway.schemas = security_1
 flyway.user = marius
 flyway.password = password
 
 our.very.secret.key=secret
-
-logging.level.org.springframework.web=debug
-spring.mvc.log-request-details=true
-
-logging.level.org.springframework.web.server.adapter.HttpWebHandlerAdapter=DEBUG
-org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-spring.codec.log-request-details=true
