--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8011
 
 spring.datasource.url=jdbc:mysql://localhost:3306/security_1
-spring.datasource.username=marius
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=
 
 flyway.url = jdbc:mysql://localhost:3306/security_1
 flyway.schemas = security_1
-flyway.user = marius
-flyway.password = password
+flyway.user = root
+flyway.password =
 
 our.very.secret.key=secret
