--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8011
 
 spring.datasource.url=jdbc:mysql://localhost:3306/security_1
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=marius
+spring.datasource.password=password
 
 flyway.url = jdbc:mysql://localhost:3306/security_1
 flyway.schemas = security_1
