[MP] Uniform flyway scripts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=password
 
 flyway.url = jdbc:mysql://localhost:3306/security_1
 flyway.schemas = security_1
-flyway.user = root
+flyway.user = marius
 flyway.password =
 
 our.very.secret.key=secret
